--- a/README
+++ b/README
@@ -5,5 +5,7 @@ misc-utils, sys-utils, getopt-* should be rather distribution-neutral,
 and installing it does no harm.
 On the other hand, the stuff in login-utils defines initial boot-time
 stuff, things that are done in different ways by different distributions.
-If you install it, your machine may not boot anymore.
+If you install it, your machine may not boot anymore, or you may be
+unable to login.
+
 No RPMs are provided - get yours from your distributor.
