--- a/getopt/getopt.1
+++ b/getopt/getopt.1
@@ -33,7 +33,7 @@ parsed
 in the 
 .BR SYNOPSIS).
 The second part will start at the first non\-option parameter
-that is not an option argument, or after the first occurence of 
+that is not an option argument, or after the first occurrence of 
 .RB ` \-\- '.
 If no 
 .RB ` \-o ' 
@@ -284,7 +284,7 @@ Only if the first character of the short options string was a
 non\-option parameter output is generated at the place they are found in the 
 input (this is not supported if the first format of the 
 .B SYNOPSIS
-is used; in that case all preceding occurences of
+is used; in that case all preceding occurrences of
 .RB ` \- '
 and 
 .RB ` + '
