--- a/login-utils/login.1
+++ b/login-utils/login.1
@@ -65,9 +65,9 @@ exists (other environment variables are preserved if the
 .B \-p
 option is used).  Then the HOME, PATH, SHELL, TERM, MAIL, and LOGNAME
 environment variables are set.  PATH defaults to
-.I /usr/local/bin:/bin:/usr/bin:.
+.I /usr/local/bin:/bin:/usr/bin
 for normal users, and to
-.I /sbin:/bin:/usr/sbin:/usr/bin
+.I /usr/local/sbin:/usr/local/bin:/sbin:/bin:/usr/sbin:/usr/bin
 for root.  Last, if this is not a "quiet" login, the message of the
 day is printed and the file with the user's name in
 .I /usr/spool/mail
