--- a/mount/mount.8
+++ b/mount/mount.8
@@ -119,7 +119,10 @@ a second place using
 .B "mount --rbind olddir newdir"
 .RE
 .\" available since Linux 2.4.11.
-The mount options are not changed.
+
+Note that the filesystem mount options will remain the same as those
+on the original mount point, and cannot be changed by passing the -o
+option along with --bind/--rbind.
 
 Since Linux 2.5.1 it is possible to atomically move a mounted tree
 to another place. The call is
@@ -758,6 +761,10 @@ Since Linux 2.5.46, for most mount options the default
 is determined by the filesystem superblock. Set them with
 .BR tune2fs (8).
 .TP
+.BR acl " / " noacl
+Support POSIX Access Control Lists (or not).
+.\" requires CONFIG_EXT2_FS_POSIX_ACL
+.TP
 .BR bsddf " / " minixdf
 Set the behaviour for the
 .I statfs
@@ -826,6 +833,9 @@ the directory has the setgid bit set, in which case it takes the gid
 from the parent directory, and also gets the setgid bit set
 if it is a directory itself.
 .TP
+.BR grpquota " / " noquota " / " quota " / " usrquota
+These options are accepted but ignored.
+.TP
 .BR nobh
 Do not attach buffer_heads to file pagecache. (Since 2.5.49.)
 .TP
@@ -864,13 +874,6 @@ block 32768 on a filesystem with 4k blocks, use "sb=131072".
 .BR user_xattr " / " nouser_xattr
 Support "user." extended attributes (or not).
 .\" requires CONFIG_EXT2_FS_XATTR
-.TP
-.BR acl " / " noacl
-Support POSIX Access Control Lists (or not).
-.\" requires CONFIG_EXT2_FS_POSIX_ACL
-.TP
-.BR grpquota " / " noquota " / " quota " / " usrquota
-These options are accepted but ignored.
 
 
 .SH "Mount options for ext3"
@@ -1828,17 +1831,22 @@ mount failure
 some mount succeeded
 
 .SH FILES
+.TP 18n
 .I /etc/fstab
 file system table
-.br
+.TP
 .I /etc/mtab
 table of mounted file systems
-.br
+.TP
 .I /etc/mtab~
 lock file
-.br
+.TP
 .I /etc/mtab.tmp
 temporary file
+.TP
+.I /etc/filesystems
+a list of filesystem types to try
+
 .SH "SEE ALSO"
 .BR mount (2),
 .BR umount (2),
