--- a/sys-utils/rdev.8
+++ b/sys-utils/rdev.8
@@ -6,7 +6,7 @@
 rdev \- query/set image root device, RAM disk size, or video mode
 .SH SYNOPSIS
 .nf
-.BR "rdev [ \-rvh ] [ \-o " offset " ] [ " image " [ " value " [ " offset " ] ] ]"
+.BR "rdev [ \-Rrvh ] [ \-o " offset " ] [ " image " [ " value " [ " offset " ] ] ]"
 .BR "rdev [ \-o " offset " ] [ " image " [ " root_device " [ " offset " ] ] ]"
 .BR "ramsize [ \-o " offset " ] [ " image " [ " size " [ " offset " ] ] ]"
 .BR "vidmode [ \-o " offset " ] [ " image " [ " mode " [ " offset " ] ] ]"
@@ -149,8 +149,23 @@ At offset 502 there used to be the device number of the swap device
 (in Linux 0.12), and "rdev -s" or "swapdev" would set this.
 However, since Linux 0.95 this constant is not used any longer,
 and the swap device is specified using the
-.IR swapon ()
+.BR swapon (2)
 system call.
+
+At offset 504 there used to be the size of the ramdisk in kilobytes.
+One would specify a size, and this much was grabbed off the top of memory.
+In Linux 1.1.39 it became also possible to set this value on the kernel
+command line.
+In Linux 1.3.48 the ramdisk setup was changed. Ramdisk memory is now
+taken from the buffer cache, so that the ramdisk can grow dynamically.
+The interpretation of the ramdisk word was changed to a word of which
+the high order bit is a prompt flag (1: prompt for ramdisk:
+"VFS: Insert ramdisk floppy and press ENTER" - this is needed with a
+two-floppy boot), the next bit a load flag (1: load ramdisk),
+and the low order 11 bits give the starting block number of the
+root filesystem image (so that one can have a single floppy boot).
+See also
+.IR linux/Documentation/ramdisk.txt .
 .SH AUTHORS
 .nf
 Originally by Werner Almesberger (almesber@nessie.cs.id.ethz.ch)
