--- a/fdisk/sfdisk.8
+++ b/fdisk/sfdisk.8
@@ -538,9 +538,9 @@ There are too many options.
 .LP
 There is no support for non-DOS partition types.
 
-.SH AUTHOR
-A. E. Brouwer (aeb@cwi.nl)
-
+.\" .SH AUTHOR
+.\" A. E. Brouwer (aeb@cwi.nl)
+.\"
 .SH "SEE ALSO"
 .BR cfdisk (8),
 .BR fdisk (8),
