--- a/misc-utils/ddate.1
+++ b/misc-utils/ddate.1
@@ -68,7 +68,7 @@ It's Prickle-Prickle, the 50th of Bureaucracy, 3161.
 .br
 Celebrate Bureflux
 .PP
-% ddate +'Today's %{%A, the %e of %B%}, %Y. %N%nCelebrate %H' 29 2 1996
+% ddate +"Today's %{%A, the %e of %B%}, %Y. %N%nCelebrate %H" 29 2 1996
 .br
 Today's St. Tib's Day, 3162. 
 .br
