--- a/sys-utils/dmesg.8
+++ b/sys-utils/dmesg.8
@@ -54,5 +54,5 @@ When both options are used, only the last option on the command line will
 have an effect.
 .SH SEE ALSO
 .BR syslogd (8)
-.SH AUTHOR
-Theodore Ts'o (tytso@athena.mit.edu)
+.\" .SH AUTHOR
+.\" Theodore Ts'o (tytso@athena.mit.edu)
