--- a/sys-utils/cytune.8
+++ b/sys-utils/cytune.8
@@ -86,8 +86,10 @@ number of samples come out this way.  You will lose characters if you
 overrun the FIFO, as the Cyclades hardware does not seem to support 
 the RTS RS-232 signal line for hardware flow control from the 
 DCE to the DTE.
-.pp
-cytune will in query mode will produce a summary report when ended with 
+.PP
+In query mode
+.B cytune
+will produce a summary report when ended with 
 a SIGINT or when the threshold or timeout is changed.
 .PP
 There may be a responsiveness vs. throughput tradeoff.  The Cyclades card, 
@@ -164,15 +166,16 @@ Statistics will be gathered every
 .I interval
 seconds.
 .SH BUGS
-If you run two copies of cytune at the same time to report statistics 
-about the same port, the 'ints', 'chars', and 'max' value will be reset 
-and not reported 
-correctly.
-.BR cytune (8)
+If you run two copies of
+.B cytune
+at the same time to report statistics about the same port,
+the 'ints', 'chars', and 'max' value will be reset 
+and not reported correctly.
+.B cytune
 should prevent this, but does not.
-.SH AUTHOR
-Nick Simicich (njs@scifi.emi.net), with modifications by Rik Faith
-(faith@cs.unc.edu)
+.\" .SH AUTHOR
+.\" Nick Simicich (njs@scifi.emi.net), with modifications by
+.\" Rik Faith (faith@cs.unc.edu)
 .SH FILES
 .I /dev/ttyC[0-8]
 .br
