Imported from util-linux-2.13-pre2 tarball.

--- a/AUTHORS
+++ b/AUTHORS
@@ -1,4 +1,4 @@
-Maintainer: Adrian Bunk <bunk@kernel.org>
+Maintainer: Adrian Bunk <bunk@stusta.de>
 
 Maintainer of getopt: Frodo Looijaard <frodol@dds.nl>
 Maintainer of schedutils: Robert Love <rlove@rlove.org>
